--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
   http: ^0.13.4
+  flutter_svg: ^1.0.3
+  syncfusion_flutter_charts: ^20.1.52
+  syncfusion_flutter_datepicker: ^20.1.5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -60,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
